womtool/src/test/resources/validate/wdl_draft2/invalid/bad_local_import/bad_local_import.wdl
import "not/a/workflow.wdl" as some_wdl

workflow bad_local_import {
  call some_wdl.the_task
}
